Added animated house picked

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="rps-result player-options">
           <div class="result-container flex-container">
             <div class="rps-player-pick-container pick-container"></div>
-            <div>
+            <div class="result-label">
               <h2>
                 You win
               </h2>
