Added mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -59,16 +59,7 @@
               </h2>
               <button class="btn btn-play-again">Play Again</button>
             </div>
-            <div class="rps-computer-pick-container pick-container">
-              <div>
-                <span>The house picked</span>
-              </div>
-              <button class="btn btn-result rps-button scissors-button" type="button">
-                <span>
-                  <img class="rps-icon" src="images/icon-scissors.svg" alt="">
-                </span>
-              </button>
-            </div>
+            <div class="rps-computer-pick-container pick-container"></div>
           </div>
         </div>
       </div>
